# github-actions-playground

./: README.md  envrn.sh  pyproject.toml
.github/workflows/: coverage.yml  flake8-problem-matcher.json  lint.yml  main.yml  test.yml
src/: main.py
tests/: test_main.py
