[tool.poetry]
name = "github-actions-playground"
version = "0.1.0"
description = ""
authors = ["Yuichiro Luke Smith <contact@yu-smith.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
